﻿* Links to a new webplayer - video.js.  Has frame-by-frame buttons.
* Fixed encoding progress not reaching 100%
*Added Release Notes